--- a/neon/backends/kernels/sass/hconv_xprop_X128_N128.sass
+++ b/neon/backends/kernels/sass/hconv_xprop_X128_N128.sass
@@ -14,11 +14,14 @@
 # limitations under the License.
 
 [-
+    our $int16;
     our $prefix = 'h';
     our $shareI = 128;
     our $shareF = 128;
     our $stepI  = 32;
     our $stepF  = 64;
+    our $convert = $int16 ? 'I2F.F32.S16' : 'F2F.F32.F16';
+    sub convert {return $convert;}
 -]
 
 <INCLUDE file="xconv_xprop_common.sass"/>
@@ -76,9 +79,10 @@
     123-127 ~ readFs, readIs, tid, blkF, blkI
 
     70-71   : Out<0-1>
+    70-71   : Stats<0-1>
     72-91   : cs<0-7>, b<0-7>, c<0-3>
     92-93   : Sum<0-1>
-    94-125  ~ writeCs, readCs, alpha, beta, flags, tidOX, tidOX2, tidOX63, tidOY, to, k, n, MPQN, MPQN1, MPQN4, MPQN60, sum<0-3>
+    94-122  ~ writeCs, readCs, alpha, beta, flags, tidOX, tidOX2, tidOX63, tidOY, to, k, n, MPQN, MPQN1, MPQN4, MPQN60, sum<0-3>, max, warp_max
 
 </REGISTER_MAPPING>
 
@@ -133,17 +137,17 @@
 --:-:3:-:1  @P1 LDG.E.64    loadI, [trackI];
 --:-:6:-:1 @!P1 LDS.U.64    loadI, [addr_zero];
 
-12:-:-:-:1      F2F.F32.F16 storeF3, loadF1.H1;
---:-:-:-:1      F2F.F32.F16 storeF2, loadF1.H0;
---:-:-:-:1      F2F.F32.F16 storeF1, loadF0.H1;
---:-:2:-:2      F2F.F32.F16 storeF0, loadF0.H0;
+12:-:-:-:1      [+ convert() +] storeF3, loadF1.H1;
+--:-:-:-:1      [+ convert() +] storeF2, loadF1.H0;
+--:-:-:-:1      [+ convert() +] storeF1, loadF0.H1;
+--:-:2:-:2      [+ convert() +] storeF0, loadF0.H0;
 
 02:1:-:-:2      STS.128 [writeS], storeF;
 
-25:-:-:-:1      F2F.F32.F16 storeI3, loadI1.H1;
---:-:-:-:1      F2F.F32.F16 storeI2, loadI1.H0;
---:-:-:-:1      F2F.F32.F16 storeI1, loadI0.H1;
---:-:2:-:2      F2F.F32.F16 storeI0, loadI0.H0;
+25:-:-:-:1      [+ convert() +] storeI3, loadI1.H1;
+--:-:-:-:1      [+ convert() +] storeI2, loadI1.H0;
+--:-:-:-:1      [+ convert() +] storeI1, loadI0.H1;
+--:-:2:-:2      [+ convert() +] storeI0, loadI0.H0;
 
 02:1:-:-:1      STS.128 [writeS + 4x<szShareF>], storeI;
 
@@ -153,6 +157,7 @@
 --:-:3:-:1  @P1 LDG.E.64    loadI, [trackI];
 
 [-
+    our $convert;
     our %insert =
     (
         j0c1  => "--:-:-:-:1      ISETP.GE.AND P1, PT, posCRST,  RZ, PT;\n",
@@ -169,10 +174,10 @@
 
         j1c17 => "--:-:6:-:1  \@P1 LDS.U.64 sliceIF, [lutOffset + addr_lut];\n",
 
-        j1c33 => "02:-:-:-:1  \@P0 F2F.F32.F16 storeF3, loadF1.H1;\n",
-        j1c37 => "--:-:-:-:1  \@P0 F2F.F32.F16 storeF2, loadF1.H0;\n",
-        j1c41 => "--:-:-:-:1  \@P0 F2F.F32.F16 storeF1, loadF0.H1;\n",
-        j1c45 => "--:-:2:-:1  \@P0 F2F.F32.F16 storeF0, loadF0.H0;\n",
+        j1c33 => "02:-:-:-:1  \@P0 $convert storeF3, loadF1.H1;\n",
+        j1c37 => "--:-:-:-:1  \@P0 $convert storeF2, loadF1.H0;\n",
+        j1c41 => "--:-:-:-:1  \@P0 $convert storeF1, loadF0.H1;\n",
+        j1c45 => "--:-:2:-:1  \@P0 $convert storeF0, loadF0.H0;\n",
 
         j1c60 => "02:2:-:-:1  \@P0 STS.128 [writeS], storeF;\n",
 
@@ -189,10 +194,10 @@
         j2c40 => "02:-:2:-:1  \@P1 LDG.E.CI.64 loadF, [trackF];\n",
 
 
-        j5c45 => "04:-:-:-:1  \@P0 F2F.F32.F16 storeI3, loadI1.H1;\n",
-        j5c49 => "--:-:-:-:1  \@P0 F2F.F32.F16 storeI2, loadI1.H0;\n",
-        j5c53 => "--:-:-:-:1  \@P0 F2F.F32.F16 storeI1, loadI0.H1;\n",
-        j5c57 => "--:-:3:-:1  \@P0 F2F.F32.F16 storeI0, loadI0.H0;\n",
+        j5c45 => "04:-:-:-:1  \@P0 $convert storeI3, loadI1.H1;\n",
+        j5c49 => "--:-:-:-:1  \@P0 $convert storeI2, loadI1.H0;\n",
+        j5c53 => "--:-:-:-:1  \@P0 $convert storeI1, loadI0.H1;\n",
+        j5c57 => "--:-:3:-:1  \@P0 $convert storeI0, loadI0.H0;\n",
 
         j6c8  => "04:3:-:-:1  \@P0 STS.128 [writeS + 4x<szShareF>], storeI;\n",
 
