--- a/neon/backends/kernels/sass/hconv_xprop_X64_N64.sass
+++ b/neon/backends/kernels/sass/hconv_xprop_X64_N64.sass
@@ -14,6 +14,7 @@
 # limitations under the License.
 
 [-
+    our $int16;
     our $prefix = 'h';
     our $shareI = 64;
     our $shareF = 64;
@@ -21,6 +22,8 @@
     our $stepF  = 32;
     our $remapF = 1;
     our $remapI = 1;
+    our $convert = $int16 ? 'I2F.F32.S16' : 'F2F.F32.F16';
+    sub convert {return $convert;}
 
 -]
 
@@ -83,9 +86,10 @@
     126-127 ~ readFs, readIs
 
     74-75   : Out<0-1>
+    74-75   : Stats<0-1>
     76-95   : cs<0-7>, b<0-7>, c<0-3>
     96-97   : Sum<0-1>
-    98-125  ~ writeCs, readCs, alpha, beta, flags, tidOX, tidOX63, tidOY, to, k, n, MPQN, MPQN1, sum<0-3>
+    98-125  ~ writeCs, readCs, alpha, beta, flags, tidOX, tidOX63, tidOY, to, k, n, MPQN, MPQN1, sum<0-3>, max, warp_max
 
 </REGISTER_MAPPING>
 
@@ -141,26 +145,26 @@
 --:-:2:-:1  @P1 LDG.E.128 loadI0, [trackI];
 --:-:6:-:1 @!P1 LDS.U.128 loadI0, [addr_zero];
 
-11:-:-:-:1      F2F.F32.F16 storeF7, loadF3.H1;
---:-:-:-:1      F2F.F32.F16 storeF6, loadF3.H0;
---:-:-:-:1      F2F.F32.F16 storeF5, loadF2.H1;
---:-:1:-:1      F2F.F32.F16 storeF4, loadF2.H0;
---:-:-:-:1      F2F.F32.F16 storeF3, loadF1.H1;
---:-:-:-:1      F2F.F32.F16 storeF2, loadF1.H0;
---:-:-:-:1      F2F.F32.F16 storeF1, loadF0.H1;
---:-:5:-:1      F2F.F32.F16 storeF0, loadF0.H0;
+11:-:-:-:1      [+ convert() +] storeF7, loadF3.H1;
+--:-:-:-:1      [+ convert() +] storeF6, loadF3.H0;
+--:-:-:-:1      [+ convert() +] storeF5, loadF2.H1;
+--:-:1:-:1      [+ convert() +] storeF4, loadF2.H0;
+--:-:-:-:1      [+ convert() +] storeF3, loadF1.H1;
+--:-:-:-:1      [+ convert() +] storeF2, loadF1.H0;
+--:-:-:-:1      [+ convert() +] storeF1, loadF0.H1;
+--:-:5:-:1      [+ convert() +] storeF0, loadF0.H0;
 
 01:1:-:-:1      STS.128 [writeS + 4x<0*64 + 32>], storeF4;
 10:-:-:-:1      STS.128 [writeS + 4x<0*64 +  0>], storeF0;
 
-23:-:-:-:1      F2F.F32.F16 storeI7, loadI3.H1;
---:-:-:-:1      F2F.F32.F16 storeI6, loadI3.H0;
---:-:-:-:1      F2F.F32.F16 storeI5, loadI2.H1;
---:-:1:-:1      F2F.F32.F16 storeI4, loadI2.H0;
---:-:-:-:1      F2F.F32.F16 storeI3, loadI1.H1;
---:-:-:-:1      F2F.F32.F16 storeI2, loadI1.H0;
---:-:-:-:1      F2F.F32.F16 storeI1, loadI0.H1;
---:-:5:-:1      F2F.F32.F16 storeI0, loadI0.H0;
+23:-:-:-:1      [+ convert() +] storeI7, loadI3.H1;
+--:-:-:-:1      [+ convert() +] storeI6, loadI3.H0;
+--:-:-:-:1      [+ convert() +] storeI5, loadI2.H1;
+--:-:1:-:1      [+ convert() +] storeI4, loadI2.H0;
+--:-:-:-:1      [+ convert() +] storeI3, loadI1.H1;
+--:-:-:-:1      [+ convert() +] storeI2, loadI1.H0;
+--:-:-:-:1      [+ convert() +] storeI1, loadI0.H1;
+--:-:5:-:1      [+ convert() +] storeI0, loadI0.H0;
 
 01:-:-:-:1      STS.128 [writeS + 4x<8*64 + 32>], storeI4;
 10:1:-:-:1      STS.128 [writeS + 4x<8*64 +  0>], storeI0;
@@ -171,6 +175,7 @@
 --:-:3:-:1  @P1 LDG.E.128    loadI0, [trackI + 4x< 0>];
 
 [-
+    our $convert;
     our %insert =
     (
         j0c1  => "--:-:-:-:1      ISETP.GE.AND P1, PT, posCRST,  RZ, PT;\n",
@@ -192,14 +197,14 @@
         j1c31 => "--:-:-:-:1  \@P1 XMAD.PSL offsetIc, channel, param_DHWN.H1, offsetIc;\n",
         j1c32 => "--:-:-:-:1      IADD posCRST, posCRST, -8;\n",
 
-        j1c18 => "02:-:-:-:1  \@P0 F2F.F32.F16 storeF7, loadF3.H1;\n",
-        j1c22 => "--:-:-:-:1  \@P0 F2F.F32.F16 storeF6, loadF3.H0;\n",
-        j1c26 => "--:-:-:-:1  \@P0 F2F.F32.F16 storeF5, loadF2.H1;\n",
-        j1c30 => "--:-:5:-:1  \@P0 F2F.F32.F16 storeF4, loadF2.H0;\n",
-        j1c33 => "--:-:-:-:1  \@P0 F2F.F32.F16 storeF3, loadF1.H1;\n",
-        j1c37 => "--:-:-:-:1  \@P0 F2F.F32.F16 storeF2, loadF1.H0;\n",
-        j1c41 => "--:-:-:-:1  \@P0 F2F.F32.F16 storeF1, loadF0.H1;\n",
-        j1c45 => "--:-:2:-:1  \@P0 F2F.F32.F16 storeF0, loadF0.H0;\n",
+        j1c18 => "02:-:-:-:1  \@P0 $convert storeF7, loadF3.H1;\n",
+        j1c22 => "--:-:-:-:1  \@P0 $convert storeF6, loadF3.H0;\n",
+        j1c26 => "--:-:-:-:1  \@P0 $convert storeF5, loadF2.H1;\n",
+        j1c30 => "--:-:5:-:1  \@P0 $convert storeF4, loadF2.H0;\n",
+        j1c33 => "--:-:-:-:1  \@P0 $convert storeF3, loadF1.H1;\n",
+        j1c37 => "--:-:-:-:1  \@P0 $convert storeF2, loadF1.H0;\n",
+        j1c41 => "--:-:-:-:1  \@P0 $convert storeF1, loadF0.H1;\n",
+        j1c45 => "--:-:2:-:1  \@P0 $convert storeF0, loadF0.H0;\n",
 
         j1c47 => "10:5:-:-:1  \@P0 STS.128 [writeS + 4x<0*64 + 32>], storeF4;\n",
         j1c62 => "02:2:-:-:1  \@P0 STS.128 [writeS + 4x<0*64 +  0>], storeF0;\n",
@@ -211,14 +216,14 @@
 
         j2c30 => "02:-:2:-:1  \@P1 LDG.E.CI.128 loadF0, [trackF];\n",
 
-        j5c29 => "04:-:-:-:1  \@P0 F2F.F32.F16 storeI7, loadI3.H1;\n",
-        j5c33 => "--:-:-:-:1  \@P0 F2F.F32.F16 storeI6, loadI3.H0;\n",
-        j5c37 => "--:-:-:-:1  \@P0 F2F.F32.F16 storeI5, loadI2.H1;\n",
-        j5c41 => "--:-:5:-:1  \@P0 F2F.F32.F16 storeI4, loadI2.H0;\n",
-        j5c45 => "--:-:-:-:1  \@P0 F2F.F32.F16 storeI3, loadI1.H1;\n",
-        j5c49 => "--:-:-:-:1  \@P0 F2F.F32.F16 storeI2, loadI1.H0;\n",
-        j5c53 => "--:-:-:-:1  \@P0 F2F.F32.F16 storeI1, loadI0.H1;\n",
-        j5c57 => "--:-:3:-:1  \@P0 F2F.F32.F16 storeI0, loadI0.H0;\n",
+        j5c29 => "04:-:-:-:1  \@P0 $convert storeI7, loadI3.H1;\n",
+        j5c33 => "--:-:-:-:1  \@P0 $convert storeI6, loadI3.H0;\n",
+        j5c37 => "--:-:-:-:1  \@P0 $convert storeI5, loadI2.H1;\n",
+        j5c41 => "--:-:5:-:1  \@P0 $convert storeI4, loadI2.H0;\n",
+        j5c45 => "--:-:-:-:1  \@P0 $convert storeI3, loadI1.H1;\n",
+        j5c49 => "--:-:-:-:1  \@P0 $convert storeI2, loadI1.H0;\n",
+        j5c53 => "--:-:-:-:1  \@P0 $convert storeI1, loadI0.H1;\n",
+        j5c57 => "--:-:3:-:1  \@P0 $convert storeI0, loadI0.H0;\n",
 
         j5c59 => "10:-:-:-:1  \@P0 STS.128 [writeS + 4x<8*64 + 32>], storeI4;\n",
         j6c8  => "04:3:-:-:1  \@P0 STS.128 [writeS + 4x<8*64 +  0>], storeI0;\n",
