--- a/neon/backends/kernels/sass/hconv_bprop_C1_N64.sass
+++ b/neon/backends/kernels/sass/hconv_bprop_C1_N64.sass
@@ -14,6 +14,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+[-
+    our $int16;
+    our $convert = $int16 ? 'I2F.F32.S16' : 'F2F.F32.F16';
+    sub convert { return $convert; }
+
+    our $dtype = $int16 ? 'S16' : 'U16';
+    sub dtype { return $dtype; }
+-]
 
 <CONSTANT_MAPPING>
     addr_lut : 4x<64*4>
@@ -233,15 +241,15 @@
 
 --:-:-:-:0      IADD K, K, -8;
 
---:-:-:-:1  @P1 LDG.E.CI.U16 load0F0, [track0F + 2x<0>];
---:-:-:-:1  @P1 LDG.E.CI.U16 load0F1, [track0F + 2x<1>];
---:-:-:-:1  @P1 LDG.E.CI.U16 load0F2, [track0F + 2x<2>];
---:-:1:-:1  @P1 LDG.E.CI.U16 load0F3, [track0F + 2x<3>];
+--:-:-:-:1  @P1 LDG.E.CI.[+ dtype() +] load0F0, [track0F + 2x<0>];
+--:-:-:-:1  @P1 LDG.E.CI.[+ dtype() +] load0F1, [track0F + 2x<1>];
+--:-:-:-:1  @P1 LDG.E.CI.[+ dtype() +] load0F2, [track0F + 2x<2>];
+--:-:1:-:1  @P1 LDG.E.CI.[+ dtype() +] load0F3, [track0F + 2x<3>];
 
---:-:-:-:1  @P1 LDG.E.CI.U16 load4F0, [track4F + 2x<0>];
---:-:-:-:1  @P1 LDG.E.CI.U16 load4F1, [track4F + 2x<1>];
---:-:-:-:1  @P1 LDG.E.CI.U16 load4F2, [track4F + 2x<2>];
---:-:2:-:1  @P1 LDG.E.CI.U16 load4F3, [track4F + 2x<3>];
+--:-:-:-:1  @P1 LDG.E.CI.[+ dtype() +] load4F0, [track4F + 2x<0>];
+--:-:-:-:1  @P1 LDG.E.CI.[+ dtype() +] load4F1, [track4F + 2x<1>];
+--:-:-:-:1  @P1 LDG.E.CI.[+ dtype() +] load4F2, [track4F + 2x<2>];
+--:-:2:-:1  @P1 LDG.E.CI.[+ dtype() +] load4F3, [track4F + 2x<3>];
 
 --:-:-:-:0      ISETP.GT.AND P1, PT, K, RZ, P1;
 
@@ -250,43 +258,43 @@
 
 --:-:-:-:0      ISETP.GT.AND P2, PT, K, RZ, P2;
 
-01:-:-:-:1      F2F.F32.F16 store0F0, load0F0;
---:-:-:-:1      F2F.F32.F16 store0F1, load0F1;
---:-:-:-:1      F2F.F32.F16 store0F2, load0F2;
---:-:1:-:1      F2F.F32.F16 store0F3, load0F3;
+01:-:-:-:1      [+ convert() +] store0F0, load0F0;
+--:-:-:-:1      [+ convert() +] store0F1, load0F1;
+--:-:-:-:1      [+ convert() +] store0F2, load0F2;
+--:-:1:-:1      [+ convert() +] store0F3, load0F3;
 --:-:-:-:6      IADD   track0F0.CC, track0F0, param_CRST8;
 --:-:-:-:0      IADD.X track0F1,    track0F1, RZ;
 01:-:-:-:1      STS.128 [writeFs + 4x<0*32>], store0F;
 
-02:-:-:-:1      F2F.F32.F16 store4F0, load4F0;
---:-:-:-:1      F2F.F32.F16 store4F1, load4F1;
---:-:-:-:1      F2F.F32.F16 store4F2, load4F2;
---:-:2:-:1      F2F.F32.F16 store4F3, load4F3;
+02:-:-:-:1      [+ convert() +] store4F0, load4F0;
+--:-:-:-:1      [+ convert() +] store4F1, load4F1;
+--:-:-:-:1      [+ convert() +] store4F2, load4F2;
+--:-:2:-:1      [+ convert() +] store4F3, load4F3;
 --:-:-:-:6      IADD   track4F0.CC, track4F0, param_CRST8;
 --:-:-:-:0      IADD.X track4F1,    track4F1, RZ;
 02:-:-:-:1      STS.128 [writeFs + 4x<4*32>], store4F;
 
-04:-:-:-:1      F2F.F32.F16 store0E7, load0E3.H1;
---:-:-:-:1      F2F.F32.F16 store0E6, load0E3.H0;
---:-:-:-:1      F2F.F32.F16 store0E5, load0E2.H1;
---:-:1:-:1      F2F.F32.F16 store0E4, load0E2.H0;
---:-:-:-:1      F2F.F32.F16 store0E3, load0E1.H1;
---:-:-:-:1      F2F.F32.F16 store0E2, load0E1.H0;
---:-:-:-:1      F2F.F32.F16 store0E1, load0E0.H1;
---:-:2:-:1      F2F.F32.F16 store0E0, load0E0.H0;
+04:-:-:-:1      [+ convert() +] store0E7, load0E3.H1;
+--:-:-:-:1      [+ convert() +] store0E6, load0E3.H0;
+--:-:-:-:1      [+ convert() +] store0E5, load0E2.H1;
+--:-:1:-:1      [+ convert() +] store0E4, load0E2.H0;
+--:-:-:-:1      [+ convert() +] store0E3, load0E1.H1;
+--:-:-:-:1      [+ convert() +] store0E2, load0E1.H0;
+--:-:-:-:1      [+ convert() +] store0E1, load0E0.H1;
+--:-:2:-:1      [+ convert() +] store0E0, load0E0.H0;
 --:-:-:-:6      IADD   track0E0.CC, track0E0, param_MPQN8;
 --:-:-:-:0      IADD.X track0E1,    track0E1, RZ;
 01:-:-:-:1      STS.128 [writeEs + 4x<0*64 + 32>], store0E4;
 02:1:-:-:2      STS.128 [writeEs + 4x<0*64 +  0>], store0E0;
 
-09:-:-:-:1      F2F.F32.F16 store4E7, load4E3.H1;
---:-:-:-:1      F2F.F32.F16 store4E6, load4E3.H0;
---:-:-:-:1      F2F.F32.F16 store4E5, load4E2.H1;
---:-:1:-:1      F2F.F32.F16 store4E4, load4E2.H0;
---:-:-:-:1      F2F.F32.F16 store4E3, load4E1.H1;
---:-:-:-:1      F2F.F32.F16 store4E2, load4E1.H0;
---:-:-:-:1      F2F.F32.F16 store4E1, load4E0.H1;
---:-:2:-:1      F2F.F32.F16 store4E0, load4E0.H0;
+09:-:-:-:1      [+ convert() +] store4E7, load4E3.H1;
+--:-:-:-:1      [+ convert() +] store4E6, load4E3.H0;
+--:-:-:-:1      [+ convert() +] store4E5, load4E2.H1;
+--:-:1:-:1      [+ convert() +] store4E4, load4E2.H0;
+--:-:-:-:1      [+ convert() +] store4E3, load4E1.H1;
+--:-:-:-:1      [+ convert() +] store4E2, load4E1.H0;
+--:-:-:-:1      [+ convert() +] store4E1, load4E0.H1;
+--:-:2:-:1      [+ convert() +] store4E0, load4E0.H0;
 --:-:-:-:6      IADD   track4E0.CC, track4E0, param_MPQN8;
 --:-:-:-:0      IADD.X track4E1,    track4E1, RZ;
 01:-:-:-:1      STS.128 [writeEs + 4x<4*64 + 32>], store4E4;
@@ -304,15 +312,15 @@
 --:-:-:-:1      LDS.U.128 j0Ex4, [readEs + 4x<0*64 + 32>];
 --:-:1:-:1      LDS.U.128 j0Fy4, [readFs + 4x<0*32 + 16>];
 
---:-:-:-:1  @P1 LDG.E.CI.U16 load0F0, [track0F + 2x<0>];
---:-:-:-:1  @P1 LDG.E.CI.U16 load0F1, [track0F + 2x<1>];
---:-:-:-:1  @P1 LDG.E.CI.U16 load0F2, [track0F + 2x<2>];
---:-:2:-:1  @P1 LDG.E.CI.U16 load0F3, [track0F + 2x<3>];
+--:-:-:-:1  @P1 LDG.E.CI.[+ dtype() +] load0F0, [track0F + 2x<0>];
+--:-:-:-:1  @P1 LDG.E.CI.[+ dtype() +] load0F1, [track0F + 2x<1>];
+--:-:-:-:1  @P1 LDG.E.CI.[+ dtype() +] load0F2, [track0F + 2x<2>];
+--:-:2:-:1  @P1 LDG.E.CI.[+ dtype() +] load0F3, [track0F + 2x<3>];
 
---:-:-:-:1  @P1 LDG.E.CI.U16 load4F0, [track4F + 2x<0>];
---:-:-:-:1  @P1 LDG.E.CI.U16 load4F1, [track4F + 2x<1>];
---:-:-:-:1  @P1 LDG.E.CI.U16 load4F2, [track4F + 2x<2>];
---:-:3:-:1  @P1 LDG.E.CI.U16 load4F3, [track4F + 2x<3>];
+--:-:-:-:1  @P1 LDG.E.CI.[+ dtype() +] load4F0, [track4F + 2x<0>];
+--:-:-:-:1  @P1 LDG.E.CI.[+ dtype() +] load4F1, [track4F + 2x<1>];
+--:-:-:-:1  @P1 LDG.E.CI.[+ dtype() +] load4F2, [track4F + 2x<2>];
+--:-:3:-:1  @P1 LDG.E.CI.[+ dtype() +] load4F3, [track4F + 2x<3>];
 
 --:-:-:-:0      ISETP.GT.AND P1, PT, K, RZ, P1;
 
@@ -323,57 +331,60 @@
 
 NEXT_8K:
 --:-:-:-:1      ISETP.GT.AND P0, PT, K, -8, PT;
-<CODE>
+
+[+
+    our $convert;
+    our $dtype;
     my %insert =
     (
         j0c8  => "--:-:-:-:1      IADD K, K, -8;\n",
 
-        j0c12 => "02:-:-:-:1  \@P0 F2F.F32.F16 store0F0, load0F0;\n",
-        j0c16 => "--:-:-:-:1  \@P0 F2F.F32.F16 store0F1, load0F1;\n",
-        j0c20 => "--:-:-:-:1  \@P0 F2F.F32.F16 store0F2, load0F2;\n",
-        j0c24 => "--:-:2:-:1  \@P0 F2F.F32.F16 store0F3, load0F3;\n",
+        j0c12 => "02:-:-:-:1  \@P0 $convert store0F0, load0F0;\n",
+        j0c16 => "--:-:-:-:1  \@P0 $convert store0F1, load0F1;\n",
+        j0c20 => "--:-:-:-:1  \@P0 $convert store0F2, load0F2;\n",
+        j0c24 => "--:-:2:-:1  \@P0 $convert store0F3, load0F3;\n",
         j0c26 => "--:-:-:-:1  \@P0 IADD   track0F0.CC, track0F0, param_CRST8;\n",
         j0c31 => "--:-:-:-:1  \@P0 IADD.X track0F1,    track0F1, RZ;\n",
         j0c38 => "02:2:-:-:1  \@P0 STS.128 [writeFs + 4x<0*32>], store0F;\n",
-        j1c8  => "02:-:-:-:1  \@P1 LDG.E.CI.U16 load0F0, [track0F + 2x<0>];\n",
-        j1c10 => "--:-:-:-:1  \@P1 LDG.E.CI.U16 load0F1, [track0F + 2x<1>];\n",
-        j1c12 => "--:-:-:-:1  \@P1 LDG.E.CI.U16 load0F2, [track0F + 2x<2>];\n",
-        j1c14 => "--:-:2:-:1  \@P1 LDG.E.CI.U16 load0F3, [track0F + 2x<3>];\n",
+        j1c8  => "02:-:-:-:1  \@P1 LDG.E.CI.$dtype load0F0, [track0F + 2x<0>];\n",
+        j1c10 => "--:-:-:-:1  \@P1 LDG.E.CI.$dtype load0F1, [track0F + 2x<1>];\n",
+        j1c12 => "--:-:-:-:1  \@P1 LDG.E.CI.$dtype load0F2, [track0F + 2x<2>];\n",
+        j1c14 => "--:-:2:-:1  \@P1 LDG.E.CI.$dtype load0F3, [track0F + 2x<3>];\n",
 
-        j2c12 => "04:-:-:-:1  \@P0 F2F.F32.F16 store4F0, load4F0;\n",
-        j2c16 => "--:-:-:-:1  \@P0 F2F.F32.F16 store4F1, load4F1;\n",
-        j2c20 => "--:-:-:-:1  \@P0 F2F.F32.F16 store4F2, load4F2;\n",
-        j2c24 => "--:-:3:-:1  \@P0 F2F.F32.F16 store4F3, load4F3;\n",
+        j2c12 => "04:-:-:-:1  \@P0 $convert store4F0, load4F0;\n",
+        j2c16 => "--:-:-:-:1  \@P0 $convert store4F1, load4F1;\n",
+        j2c20 => "--:-:-:-:1  \@P0 $convert store4F2, load4F2;\n",
+        j2c24 => "--:-:3:-:1  \@P0 $convert store4F3, load4F3;\n",
         j2c26 => "--:-:-:-:1  \@P0 IADD   track4F0.CC, track4F0, param_CRST8;\n",
         j2c31 => "--:-:-:-:1  \@P0 IADD.X track4F1,    track4F1, RZ;\n",
         j2c38 => "04:3:-:-:1  \@P0 STS.128 [writeFs + 4x<4*32>], store4F;\n",
-        j3c8  => "04:-:-:-:1  \@P1 LDG.E.CI.U16 load4F0, [track4F + 2x<0>];\n",
-        j3c10 => "--:-:-:-:1  \@P1 LDG.E.CI.U16 load4F1, [track4F + 2x<1>];\n",
-        j3c12 => "--:-:-:-:1  \@P1 LDG.E.CI.U16 load4F2, [track4F + 2x<2>];\n",
-        j3c14 => "--:-:3:-:1  \@P1 LDG.E.CI.U16 load4F3, [track4F + 2x<3>];\n",
+        j3c8  => "04:-:-:-:1  \@P1 LDG.E.CI.$dtype load4F0, [track4F + 2x<0>];\n",
+        j3c10 => "--:-:-:-:1  \@P1 LDG.E.CI.$dtype load4F1, [track4F + 2x<1>];\n",
+        j3c12 => "--:-:-:-:1  \@P1 LDG.E.CI.$dtype load4F2, [track4F + 2x<2>];\n",
+        j3c14 => "--:-:3:-:1  \@P1 LDG.E.CI.$dtype load4F3, [track4F + 2x<3>];\n",
 
-        j4c12 => "08:-:-:-:1  \@P0 F2F.F32.F16 store0E7, load0E3.H1;\n",
-        j4c16 => "--:-:-:-:1  \@P0 F2F.F32.F16 store0E6, load0E3.H0;\n",
-        j4c20 => "--:-:-:-:1  \@P0 F2F.F32.F16 store0E5, load0E2.H1;\n",
-        j4c24 => "--:-:6:-:1  \@P0 F2F.F32.F16 store0E4, load0E2.H0;\n",
-        j4c28 => "--:-:-:-:1  \@P0 F2F.F32.F16 store0E3, load0E1.H1;\n",
-        j4c32 => "--:-:-:-:1  \@P0 F2F.F32.F16 store0E2, load0E1.H0;\n",
-        j4c36 => "--:-:-:-:1  \@P0 F2F.F32.F16 store0E1, load0E0.H1;\n",
-        j4c40 => "--:-:4:-:1  \@P0 F2F.F32.F16 store0E0, load0E0.H0;\n",
+        j4c12 => "08:-:-:-:1  \@P0 $convert store0E7, load0E3.H1;\n",
+        j4c16 => "--:-:-:-:1  \@P0 $convert store0E6, load0E3.H0;\n",
+        j4c20 => "--:-:-:-:1  \@P0 $convert store0E5, load0E2.H1;\n",
+        j4c24 => "--:-:6:-:1  \@P0 $convert store0E4, load0E2.H0;\n",
+        j4c28 => "--:-:-:-:1  \@P0 $convert store0E3, load0E1.H1;\n",
+        j4c32 => "--:-:-:-:1  \@P0 $convert store0E2, load0E1.H0;\n",
+        j4c36 => "--:-:-:-:1  \@P0 $convert store0E1, load0E0.H1;\n",
+        j4c40 => "--:-:4:-:1  \@P0 $convert store0E0, load0E0.H0;\n",
         j4c42 => "20:-:-:-:1  \@P0 STS.128 [writeEs + 4x<0*64 + 32>], store0E4;\n",
         j4c44 => "--:-:-:-:1  \@P0 IADD   track0E0.CC, track0E0, param_MPQN8;\n",
         j4c49 => "--:-:-:-:1  \@P0 IADD.X track0E1,    track0E1, RZ;\n",
         j4c56 => "08:4:-:-:1  \@P0 STS.128 [writeEs + 4x<0*64 +  0>], store0E0;\n",
         j5c8  => "08:-:4:-:1  \@P2 LDG.E.128 load0E0, [track0E];\n",
 
-        j5c12 => "10:-:-:-:1  \@P0 F2F.F32.F16 store4E7, load4E3.H1;\n",
-        j5c16 => "--:-:-:-:1  \@P0 F2F.F32.F16 store4E6, load4E3.H0;\n",
-        j5c20 => "--:-:-:-:1  \@P0 F2F.F32.F16 store4E5, load4E2.H1;\n",
-        j5c24 => "--:-:6:-:1  \@P0 F2F.F32.F16 store4E4, load4E2.H0;\n",
-        j5c28 => "--:-:-:-:1  \@P0 F2F.F32.F16 store4E3, load4E1.H1;\n",
-        j5c32 => "--:-:-:-:1  \@P0 F2F.F32.F16 store4E2, load4E1.H0;\n",
-        j5c36 => "--:-:-:-:1  \@P0 F2F.F32.F16 store4E1, load4E0.H1;\n",
-        j5c40 => "--:-:5:-:1  \@P0 F2F.F32.F16 store4E0, load4E0.H0;\n",
+        j5c12 => "10:-:-:-:1  \@P0 $convert store4E7, load4E3.H1;\n",
+        j5c16 => "--:-:-:-:1  \@P0 $convert store4E6, load4E3.H0;\n",
+        j5c20 => "--:-:-:-:1  \@P0 $convert store4E5, load4E2.H1;\n",
+        j5c24 => "--:-:6:-:1  \@P0 $convert store4E4, load4E2.H0;\n",
+        j5c28 => "--:-:-:-:1  \@P0 $convert store4E3, load4E1.H1;\n",
+        j5c32 => "--:-:-:-:1  \@P0 $convert store4E2, load4E1.H0;\n",
+        j5c36 => "--:-:-:-:1  \@P0 $convert store4E1, load4E0.H1;\n",
+        j5c40 => "--:-:5:-:1  \@P0 $convert store4E0, load4E0.H0;\n",
         j5c42 => "20:-:-:-:1  \@P0 STS.128 [writeEs + 4x<4*64 + 32>], store4E4;\n",
         j5c44 => "--:-:-:-:1  \@P0 IADD   track4E0.CC, track4E0, param_MPQN8;\n",
         j5c49 => "--:-:-:-:1  \@P0 IADD.X track4E1,    track4E1, RZ;\n",
@@ -436,8 +447,7 @@ NEXT_8K:
         }
     }
     return $out;
-
-</CODE>
++]
 
 --:-:-:-:0      MOV warp_cnt, 32;
 --:-:1:-:1      S2R tid,  SR_TID.X;
