--- a/neon/backends/kernels/sass/hgemm_nn_128x128.sass
+++ b/neon/backends/kernels/sass/hgemm_nn_128x128.sass
@@ -14,6 +14,20 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+[-
+our $int16;
+our $convert = $int16 ? 'I2F.F32.S16' : 'F2F.F32.F16';
+sub convert_in {return $convert;}
+
+sub int16_params {
+    return $int16 ? q{
+param_Stats[0]  : c[0x0][0x190]
+param_Stats[1]  : c[0x0][0x194]
+param_scale     : c[0x0][0x198]
+    } : "";
+}
+-]
+
 
 <CONSTANT_MAPPING>
     addr_zero  : 4x<128*8*4>
@@ -40,6 +54,7 @@
     param_ldbz      : c[0x0][0x180]
     param_ldcz      : c[0x0][0x184]
     param_loops     : c[0x0][0x188]
+    [+ int16_params() +]
 </CONSTANT_MAPPING>
 
 <REGISTER_MAPPING>
@@ -69,9 +84,10 @@
 
     64-75   ~ ldc, ldcz, ci, xmad_c, tid_31, tid_96, tid_128
 
-    64-75   : c<0-7>, d3, d2, d1, d0
-    76-85   : C00y<0-1>, C04y<0-1>, C08y<0-1>, C12y<0-1>
-    86-107  ~ ldc1, ldc4, ldc60, writeCs, readCs, cx<00|64>, cy<00|04|08|12>, alpha, beta, flags
+    64-79   : c<0-7>, d3, d2, d1, d0, cs<0-3>
+    64-65   : Stats<0-1>
+    80-89   : C00y<0-1>, C04y<0-1>, C08y<0-1>, C12y<0-1>
+    90-118  ~ ldc1, ldc4, ldc60, writeCs, readCs, cx<00|64>, cy<00|04|08|12>, alpha, beta, flags, warp_max, maxabs
 
 
 </REGISTER_MAPPING>
@@ -91,9 +107,9 @@
 --:-:-:-:1      MOV loop, RZ;
 
 --:-:-:-:1      STS.128 [addr_zero], RZ;
-<CODE>
+[+
         join('', map sprintf("--:-:-:-:1      LDS.U.128 czero%02d, [addr_zero];\n", $_ * 4), 0..15);
-</CODE>
++]
 
 01:-:-:-:1      LOP.AND tid31,  tid,  31;
 --:-:-:-:1      LOP.AND tid128, tid,  128;
@@ -152,7 +168,7 @@
 
 REMAINDER:
 
-<CODE>
+[+
     our $vec;
     return $vec ? q{
 --:-:-:-:2      ISETP.LT.AND P3, PT, tidBY, k, P6;
@@ -211,30 +227,31 @@ REMAINDER:
 --:-:-:-:1 @!P3 MOV loadA3, RZ;
 </SCHEDULE_BLOCK>
     };
-</CODE>
++]
 
-<CODE>
+[+
     our $vec;
-    return $vec ? q{
+    our $convert;
+    return $vec ? qq{
 // bDoRemainder = k & 7 && k > 8
 --:-:-:-:0      LOP.AND.NZ P1, RZ, k, 7;
 
-18:-:-:-:4      F2F.F32.F16 loadB3, loadB1.H1;
+18:-:-:-:4      $convert loadB3, loadB1.H1;
 --:-:-:-:0      IADD   trackB0.CC, trackB0, param_ldb8;
---:-:-:-:4      F2F.F32.F16 loadB2, loadB1.H0;
---:-:-:-:4      F2F.F32.F16 loadB1, loadB0.H1;
---:-:4:-:2      F2F.F32.F16 loadB0, loadB0.H0;
+--:-:-:-:4      $convert loadB2, loadB1.H0;
+--:-:-:-:4      $convert loadB1, loadB0.H1;
+--:-:4:-:2      $convert loadB0, loadB0.H0;
 
 --:-:-:-:0      IADD.X trackB1, trackB1, RZ;
 
 08:-:-:-:1      STS.128 [writeBs], loadB0;
 
-22:-:-:-:4      F2F.F32.F16 loadA3, loadA1.H1;
+22:-:-:-:4      $convert loadA3, loadA1.H1;
 --:-:-:-:0      IADD   trackA0.CC, trackA0, 2x<16>;
---:-:2:-:4      F2F.F32.F16 loadA2, loadA1.H0;
---:-:-:-:4      F2F.F32.F16 loadA1, loadA0.H1;
+--:-:2:-:4      $convert loadA2, loadA1.H0;
+--:-:-:-:4      $convert loadA1, loadA0.H1;
 --:-:-:-:0      ISETP.GT.AND P1, PT, k, 8, P1;
---:-:3:-:1      F2F.F32.F16 loadA0, loadA0.H0;
+--:-:3:-:1      $convert loadA0, loadA0.H0;
 
 --:-:-:-:0      IADD.X trackA1, trackA1, RZ;
 
@@ -242,24 +259,24 @@ REMAINDER:
 --:-:-:-:1      STS [writeAs + 4x<2*128>], loadA2;
 04:-:-:-:1      STS [writeAs + 4x<1*128>], loadA1;
 --:-:-:-:1      STS [writeAs + 4x<0*128>], loadA0;
-    } : q{
+    } : qq{
 --:-:-:-:0      ISETP.GT.AND P1, PT, k, 8, PT;
 
-08:-:-:-:4      F2F.F32.F16 loadB0, loadB0;
+08:-:-:-:4      $convert loadB0, loadB0;
 --:-:-:-:0      IADD   trackB0.CC, trackB0, param_ldb8;
---:-:-:-:4      F2F.F32.F16 loadB1, loadB1;
---:-:-:-:4      F2F.F32.F16 loadB2, loadB2;
---:-:4:-:2      F2F.F32.F16 loadB3, loadB3;
+--:-:-:-:4      $convert loadB1, loadB1;
+--:-:-:-:4      $convert loadB2, loadB2;
+--:-:4:-:2      $convert loadB3, loadB3;
 
 --:-:-:-:0      IADD.X trackB1, trackB1, RZ;
 
 08:-:-:-:1      STS.128 [writeBs], loadB0;
 
-02:-:-:-:4      F2F.F32.F16 loadA0, loadA0;
+02:-:-:-:4      $convert loadA0, loadA0;
 --:-:-:-:0      IADD   trackA0.CC, trackA0, 2x<8>;
---:-:2:-:4      F2F.F32.F16 loadA1, loadA1;
---:-:-:-:4      F2F.F32.F16 loadA2, loadA2;
---:-:3:-:1      F2F.F32.F16 loadA3, loadA3;
+--:-:2:-:4      $convert loadA1, loadA1;
+--:-:-:-:4      $convert loadA2, loadA2;
+--:-:3:-:1      $convert loadA3, loadA3;
 
 --:-:-:-:0      IADD.X trackA1, trackA1, RZ;
 
@@ -268,7 +285,7 @@ REMAINDER:
 04:-:-:-:1      STS [writeAs + 4x<2*128>], loadA2;
 --:-:-:-:1      STS [writeAs + 4x<3*128>], loadA3;
     };
-</CODE>
++]
 
 --:-:-:-:1      LOP.XOR readAs, readAs, 4x<128*8*2>;
 --:-:-:-:0      LOP.XOR readBs, readBs, 4x<128*8*2>;
@@ -278,8 +295,9 @@ REMAINDER:
 
 
 
-<CODE>
+[+
     our $vec;
+    our $convert;
     my $k_end = $vec ? 16 : 24;
     our @top = ("--:-:-:-:1      ISETP.GE.AND P3, PT, k, $k_end, P6;\n");
     our %insert =
@@ -295,22 +313,22 @@ REMAINDER:
         j0c28 => "--:-:5:-:1  \@P2 LDG.E.CI.64 loadA0, [trackA + 2x<0>];\n",
         j0c30 => "20:4:6:-:1  \@P2 LDG.E.CI.64 loadA4, [trackA + 2x<8>];\n",
 
-        j4c5  => "--:-:-:-:1 \@!P4 F2F.F32.F16 loadA3, loadA5.H1;\n",
-        j4c9  => "--:-:-:-:1 \@!P4 F2F.F32.F16 loadA2, loadA5.H0;\n",
-        j4c13 => "--:-:-:-:1 \@!P4 F2F.F32.F16 loadA1, loadA4.H1;\n",
-        j4c17 => "--:-:-:-:1 \@!P4 F2F.F32.F16 loadA0, loadA4.H0;\n",
+        j4c5  => "--:-:-:-:1 \@!P4 $convert loadA3, loadA5.H1;\n",
+        j4c9  => "--:-:-:-:1 \@!P4 $convert loadA2, loadA5.H0;\n",
+        j4c13 => "--:-:-:-:1 \@!P4 $convert loadA1, loadA4.H1;\n",
+        j4c17 => "--:-:-:-:1 \@!P4 $convert loadA0, loadA4.H0;\n",
 
-        j5c5  => "02:-:-:-:1  \@P0 F2F.F32.F16 loadB3, loadB1.H1;\n",
-        j5c9  => "--:-:-:-:1  \@P0 F2F.F32.F16 loadB2, loadB1.H0;\n",
-        j5c13 => "--:-:-:-:1  \@P0 F2F.F32.F16 loadB1, loadB0.H1;\n",
-        j5c17 => "--:-:2:-:1  \@P0 F2F.F32.F16 loadB0, loadB0.H0;\n",
+        j5c5  => "02:-:-:-:1  \@P0 $convert loadB3, loadB1.H1;\n",
+        j5c9  => "--:-:-:-:1  \@P0 $convert loadB2, loadB1.H0;\n",
+        j5c13 => "--:-:-:-:1  \@P0 $convert loadB1, loadB0.H1;\n",
+        j5c17 => "--:-:2:-:1  \@P0 $convert loadB0, loadB0.H0;\n",
 
         j5c35 => "02:-:-:-:1  \@P0 STS.128 [writeBs], loadB0;\n",
 
-        j6c5  => "10:-:2:-:1  \@P4 F2F.F32.F16 loadA3, loadA1.H1;\n",
-        j6c9  => "--:-:3:-:1  \@P4 F2F.F32.F16 loadA2, loadA1.H0;\n",
-        j6c13 => "--:-:4:-:1  \@P4 F2F.F32.F16 loadA1, loadA0.H1;\n",
-        j6c17 => "--:-:5:-:1  \@P4 F2F.F32.F16 loadA0, loadA0.H0;\n",
+        j6c5  => "10:-:2:-:1  \@P4 $convert loadA3, loadA1.H1;\n",
+        j6c9  => "--:-:3:-:1  \@P4 $convert loadA2, loadA1.H0;\n",
+        j6c13 => "--:-:4:-:1  \@P4 $convert loadA1, loadA0.H1;\n",
+        j6c17 => "--:-:5:-:1  \@P4 $convert loadA0, loadA0.H0;\n",
 
         j6c29 => "02:-:-:-:1  \@P0 STS [writeAs + 4x<3*128>], loadA3;\n",
         j6c31 => "04:-:-:-:1  \@P0 STS [writeAs + 4x<2*128>], loadA2;\n",
@@ -334,17 +352,17 @@ REMAINDER:
         j0c33 => "--:-:6:-:1  \@P2 LDG.E.CI.S16 loadA2, [trackA + 2x<2>];\n",
         j0c35 => "--:-:6:-:1  \@P2 LDG.E.CI.S16 loadA3, [trackA + 2x<3>];\n",
 
-        j5c8  => "02:-:-:-:1  \@P3 F2F.F32.F16 loadB0, loadB0;\n",
-        j5c12 => "--:-:-:-:1  \@P3 F2F.F32.F16 loadB1, loadB1;\n",
-        j5c16 => "--:-:-:-:1  \@P3 F2F.F32.F16 loadB2, loadB2;\n",
-        j5c20 => "--:-:2:-:1  \@P3 F2F.F32.F16 loadB3, loadB3;\n",
+        j5c8  => "02:-:-:-:1  \@P3 $convert loadB0, loadB0;\n",
+        j5c12 => "--:-:-:-:1  \@P3 $convert loadB1, loadB1;\n",
+        j5c16 => "--:-:-:-:1  \@P3 $convert loadB2, loadB2;\n",
+        j5c20 => "--:-:2:-:1  \@P3 $convert loadB3, loadB3;\n",
 
         j5c39 => "02:-:-:-:1  \@P0 STS.128 [writeBs], loadB0;\n",
 
-        j6c5  => "20:-:2:-:1  \@P2 F2F.F32.F16 loadA0, loadA0;\n",
-        j6c9  => "--:-:3:-:1  \@P2 F2F.F32.F16 loadA1, loadA1;\n",
-        j6c13 => "--:-:4:-:1  \@P2 F2F.F32.F16 loadA2, loadA2;\n",
-        j6c17 => "--:-:5:-:1  \@P2 F2F.F32.F16 loadA3, loadA3;\n",
+        j6c5  => "20:-:2:-:1  \@P2 $convert loadA0, loadA0;\n",
+        j6c9  => "--:-:3:-:1  \@P2 $convert loadA1, loadA1;\n",
+        j6c13 => "--:-:4:-:1  \@P2 $convert loadA2, loadA2;\n",
+        j6c17 => "--:-:5:-:1  \@P2 $convert loadA3, loadA3;\n",
 
         j6c29 => "02:-:-:-:1  \@P0 STS [writeAs + 4x<0*128>], loadA0;\n",
         j6c31 => "04:-:-:-:1  \@P0 STS [writeAs + 4x<1*128>], loadA1;\n",
@@ -370,6 +388,6 @@ REMAINDER:
                  "--:-:-:Y:5  \@P1 BRA.U REMAINDER;\n",
     );
     return;
-</CODE>
++]
 
 <INCLUDE file="hgemm_common_128x128.sass"/>
