--- a/neon/backends/kernels/sass/xconv_xprop_common.sass
+++ b/neon/backends/kernels/sass/xconv_xprop_common.sass
@@ -2,13 +2,13 @@
 
 [-
     # set externally
-    our ($prefix, $prop, $shareI, $shareF, $stepI, $stepF, $remapI, $remapF);
+    our ($prefix, $prop, $shareI, $shareF, $stepI, $stepF, $remapI, $remapF, $int16);
 
     our $addr_shift = $prefix eq 's' ? 2 : 1;
 
     sub fprop_params
     {
-        return <<'EOF';
+        my $params = <<'EOF';
     param_Sum[0]       : c[0x0][0x140]
     param_Sum[1]       : c[0x0][0x144]
     param_O[0]         : c[0x0][0x148]
@@ -54,11 +54,17 @@
     param_magic_PQ     : c[0x0][0x1e8]
     param_shift_PQ     : c[0x0][0x1ec]
 EOF
+        $params .= <<'EOF' if $int16 && $prop eq 'f';
+    param_Stats[0]     : c[0x0][0x1f0]
+    param_Stats[1]     : c[0x0][0x1f4]
+    param_scale        : c[0x0][0x1f8]
+EOF
+        return $params;
     }
     return;
 
     sub bprop_params {
-        return fprop_params() . <<'EOF';
+        my $params = fprop_params() . <<'EOF';
     param_R            : c[0x0][0x1f0]
     param_T            : c[0x0][0x1f4]
     param_magic_str_w  : c[0x0][0x1f8]
@@ -68,6 +74,12 @@ EOF
     param_magic_str_d  : c[0x0][0x208]
     param_shift_str_d  : c[0x0][0x20c]
 EOF
+        $params .= <<'EOF' if $int16;
+    param_Stats[0]     : c[0x0][0x210]
+    param_Stats[1]     : c[0x0][0x214]
+    param_scale        : c[0x0][0x218]
+EOF
+        return $params;
     }
 
     sub params
@@ -595,7 +607,7 @@ EOF
             }
             $out .= "--:-:-:-:5      CAL STORE_C;\n\n";
         }
-        return $out . "--:-:-:-:5      EXIT;\n\n";
+        return $out;
     }
 
     sub output_preds_fp32
@@ -621,6 +633,8 @@ EOF
     sub output_fp32
     {
         return sprintf <<'EOF', $stepI;
+--:-:-:-:5      EXIT;
+
 STORE_C:
 
 <SCHEDULE_BLOCK>
@@ -710,6 +724,7 @@ STORE_C:
 EOF
     }
 
+
     sub output_preds_fp16
     {
         return <<'EOF';
@@ -730,6 +745,8 @@ EOF
     sub output_fp16
     {
         return sprintf <<'EOF', $remapI ? 4 : $stepI;
+--:-:-:-:5      EXIT;
+
 STORE_C:
 
 <SCHEDULE_BLOCK>
@@ -833,16 +850,202 @@ STORE_C:
 EOF
     }
 
+
+    sub output_preds_int16
+    {
+        return <<'EOF';
+--:-:-:-:1      MOV max,   RZ;
+--:-:-:-:1      MOV alpha, param_alpha;
+--:-:-:-:1      MOV beta,  param_beta;
+--:-:-:-:1      MOV flags, param_flags;
+
+--:-:-:-:1      ISETP.LT.AND P0, PT, n, param_N, PT; // n < N
+--:-:-:-:1      LOP.AND.Z  P1, RZ, flags, 1; // !no-op
+--:-:-:-:1      LOP.AND.NZ P2, RZ, flags, 2; // relu
+--:-:-:-:1      LOP.AND.NZ P4, RZ, flags, 4; // bsum
+EOF
+    }
+
+    # relu        = flags & 2
+    # load beta   = n < N && k <  K && beta != 0
+    # store out   = n < N && k <  K && flags & 1
+    # reduce stat = n < N && k <  K
+    # reduce bsum = flags & 4
+    # output bsum = flags & 4 && tidOX63 == 0 && store out
+    #
+    # P0 = n < N
+    # P1 = flags & 1 // no-op
+    # P2 = flags & 2 // relu
+    # P4 = flags & 4 // bsum
+    #
+    # // reduce stats
+    # P6 = P0 && k < K
+    #
+    # // load beta
+    # P3 = P0 && P6 && beta != 0
+    #
+    # // store out
+    # P5 = P0 && P1 && P6
+    #
+    # // output bsum
+    # P3 = P4 && P5 && tidOX63 == 0
+
+    sub output_int16
+    {
+        return sprintf <<'EOF', $remapI ? 4 : $stepI;
+
+--:-:-:-:0      LOP.AND.Z P0, RZ, tid, 31;
+--:-:1:-:2      SHFL.BFLY PT, warp_max, max, 0x10, 0x1f;
+01:-:-:-:4      IMNMX max, warp_max, max, !PT;
+--:-:1:-:2      SHFL.BFLY PT, warp_max, max, 0x8,  0x1f;
+01:-:-:-:4      IMNMX max, warp_max, max, !PT;
+--:-:1:-:2      SHFL.BFLY PT, warp_max, max, 0x4,  0x1f;
+01:-:-:-:4      IMNMX max, warp_max, max, !PT;
+--:-:-:-:0      MOV Stats0, param_Stats[0];
+--:-:1:-:2      SHFL.BFLY PT, warp_max, max, 0x2,  0x1f;
+01:-:-:-:4      IMNMX max, warp_max, max, !PT;
+--:-:-:-:0      MOV Stats1, param_Stats[1];
+--:-:1:-:2      SHFL.BFLY PT, warp_max, max, 0x1,  0x1f;
+01:-:-:-:2      IMNMX max, warp_max, max, !PT;
+--:-:-:-:1  @P0 RED.E.MAX [Stats], max;
+--:-:-:-:5      EXIT;
+
+STORE_C:
+
+<SCHEDULE_BLOCK>
+--:-:-:-:1      ISETP.LT.AND P6, PT, k, param_K, P0; // reduce stats
+--:-:-:-:1      ISETP.NE.AND P3, PT, beta, RZ, P6;   // load beta
+--:-:-:-:1      PSETP.AND.AND P5, PT, P1, P6, PT;    // store out
+
+// Apply relu
+--:-:-:-:1  @P2 FMNMX cs0, cs0, RZ, !PT;
+--:-:-:-:1  @P2 FMNMX cs1, cs1, RZ, !PT;
+--:-:-:-:1  @P2 FMNMX cs2, cs2, RZ, !PT;
+--:-:-:-:1  @P2 FMNMX cs3, cs3, RZ, !PT;
+--:-:-:-:1  @P2 FMNMX cs4, cs4, RZ, !PT;
+--:-:-:-:1  @P2 FMNMX cs5, cs5, RZ, !PT;
+--:-:-:-:1  @P2 FMNMX cs6, cs6, RZ, !PT;
+--:-:-:-:1  @P2 FMNMX cs7, cs7, RZ, !PT;
+
+<ORDERED>
+--:-:1:-:1  @P3 LDG.E.128 b0, [Out];
+
+// Undo the stride in the X dim (items spaced by 32 are actually spaced 4)
+--:-:-:-:1      STS.128 [writeCs + 4x<0>], cs0;
+--:-:-:-:1      STS.128 [writeCs + 4x<%1$s>], cs4;
+--:-:5:-:1      LDS.U.128 cs4, [readCs + 4x<4>];
+--:-:6:-:1      LDS.U.128 cs0, [readCs + 4x<0>];
+</ORDERED>
+</SCHEDULE_BLOCK>
+
+01:-:-:-:1  @P3 I2F.F32.S16 b7, b3.H1;
+--:-:1:-:1  @P3 I2F.F32.S16 b6, b3.H0;
+--:-:-:-:1  @P3 I2F.F32.S16 b5, b2.H1;
+--:-:2:-:1  @P3 I2F.F32.S16 b4, b2.H0;
+--:-:-:-:1  @P3 I2F.F32.S16 b3, b1.H1;
+--:-:3:-:1  @P3 I2F.F32.S16 b2, b1.H0;
+--:-:-:-:1  @P3 I2F.F32.S16 b1, b0.H1;
+--:-:4:-:1  @P3 I2F.F32.S16 b0, b0.H0;
+
+<SCHEDULE_BLOCK>
+11:-:-:-:1  @P3 FFMA cs7, b7, beta, cs7;
+--:-:-:-:1  @P3 FFMA cs6, b6, beta, cs6;
+02:-:-:-:1  @P3 FFMA cs5, b5, beta, cs5;
+--:-:-:-:1  @P3 FFMA cs4, b4, beta, cs4;
+24:-:-:-:1  @P3 FFMA cs3, b3, beta, cs3;
+--:-:-:-:1  @P3 FFMA cs2, b2, beta, cs2;
+08:-:-:-:1  @P3 FFMA cs1, b1, beta, cs1;
+--:-:-:-:1  @P3 FFMA cs0, b0, beta, cs0;
+
+--:-:-:-:1      ISETP.EQ.AND P3, PT, tidOX63, RZ, P4; // output bsum
+--:-:-:-:1      PSETP.AND.AND P3, PT, P3, P5, PT;     // output bsum
+
+--:-:-:-:1      FMUL cs7, cs7, param_scale;
+--:-:-:-:1      FMUL cs6, cs6, param_scale;
+--:-:-:-:1      FMUL cs5, cs5, param_scale;
+--:-:-:-:1      FMUL cs4, cs4, param_scale;
+--:-:-:-:1      FMUL cs3, cs3, param_scale;
+--:-:-:-:1      FMUL cs2, cs2, param_scale;
+--:-:-:-:1      FMUL cs1, cs1, param_scale;
+--:-:-:-:1      FMUL cs0, cs0, param_scale;
+
+--:-:-:-:1  @P5 FADD sum0, cs7, cs6;
+--:-:-:-:1  @P5 FADD sum1, cs5, cs4;
+--:-:-:-:1  @P5 FADD sum2, cs3, cs2;
+--:-:-:-:1  @P5 FADD sum3, cs1, cs0;
+--:-:-:-:1  @P5 FADD sum0, sum0, sum1;
+--:-:-:-:1  @P5 FADD sum1, sum2, sum3;
+--:-:-:-:1  @P5 FADD sum0, sum0, sum1;
+--:-:-:-:1 @!P5 MOV  sum0, RZ;
+
+--:-:-:-:1      F2I.S16.F32 cs7, cs7;
+--:-:1:-:1      F2I.S16.F32 cs6, cs6;
+--:-:-:-:1      F2I.S16.F32 cs5, cs5;
+--:-:2:-:1      F2I.S16.F32 cs4, cs4;
+--:-:-:-:1      F2I.S16.F32 cs3, cs3;
+--:-:3:-:1      F2I.S16.F32 cs2, cs2;
+--:-:-:-:1      F2I.S16.F32 cs1, cs1;
+--:-:4:-:1      F2I.S16.F32 cs0, cs0;
+</SCHEDULE_BLOCK>
+
+// Pack 2 16 bit values into 32 bit words
+01:-:-:-:2      BFI c3, cs7, 0x1010, cs6;
+02:-:-:-:2      BFI c2, cs5, 0x1010, cs4;
+04:-:-:-:2      BFI c1, cs3, 0x1010, cs2;
+08:-:-:-:2      BFI c0, cs1, 0x1010, cs0;
+
+--:-:-:-:0      IADD k, k, 1;
+
+// Store results back to global
+--:1:-:-:4  @P5 STG.E.CG.128 [Out], c0;
+
+<SCHEDULE_BLOCK>
+// a = abs(a)
+--:-:-:-:1  @P6 VABSDIFF.S16.S16.MRG_16L cs0, c0,    RZ, RZ;
+--:-:-:-:1  @P6 VABSDIFF.S16.S16.MRG_16L cs1, c1,    RZ, RZ;
+--:-:-:-:1  @P6 VABSDIFF.S16.S16.MRG_16L cs2, c2,    RZ, RZ;
+--:-:-:-:1  @P6 VABSDIFF.S16.S16.MRG_16L cs3, c3,    RZ, RZ;
+--:-:-:-:1  @P6 VABSDIFF.S16.S16.MRG_16H cs0, c0.H1, RZ, cs0;
+--:-:-:-:1  @P6 VABSDIFF.S16.S16.MRG_16H cs1, c1.H1, RZ, cs1;
+--:-:-:-:1  @P6 VABSDIFF.S16.S16.MRG_16H cs2, c2.H1, RZ, cs2;
+--:-:-:-:1  @P6 VABSDIFF.S16.S16.MRG_16H cs3, c3.H1, RZ, cs3;
+
+// max = max(c,d,max(a,b,max)) ...
+--:-:-:-:1  @P6 VMNMX.UD.U16.U16.MX.MAX max, cs0, cs0.H1, max;
+--:-:-:-:1  @P6 VMNMX.UD.U16.U16.MX.MAX max, cs1, cs1.H1, max;
+--:-:-:-:1  @P6 VMNMX.UD.U16.U16.MX.MAX max, cs2, cs2.H1, max;
+--:-:-:-:1  @P6 VMNMX.UD.U16.U16.MX.MAX max, cs3, cs3.H1, max;
+
+--:-:2:-:2  @P4 SHFL.BFLY PT, sum1, sum0, 1,  0x1f;
+02:-:-:-:4  @P4 FADD sum0, sum1, sum0;
+--:-:2:-:2  @P4 SHFL.BFLY PT, sum1, sum0, 2,  0x1f;
+02:-:-:-:4  @P4 FADD sum0, sum1, sum0;
+--:-:2:-:2  @P4 SHFL.BFLY PT, sum1, sum0, 4,  0x1f;
+02:-:-:-:2  @P4 FADD sum0, sum1, sum0;
+</SCHEDULE_BLOCK>
+
+01:-:-:-:0      IADD   Out0.CC, Out0, MPQN1;
+--:2:-:-:6  @P3 RED.E.ADD.F32.FTZ.RN [Sum], sum0;
+--:-:-:-:1      IADD.X Out1,    Out1, RZ;
+
+02:-:-:-:6      IADD   Sum0.CC, Sum0, 4;
+--:-:-:-:0      IADD.X Sum1,    Sum1, RZ;
+
+--:-:-:-:5      RET;
+EOF
+    }
+
     sub output_setup
     {
         my $tidOX = shift;
-
+        return output_offset($tidOX) . output_step() . output_preds_int16() if $int16;
         return output_offset($tidOX) . output_step() . output_preds_fp16() if $prefix eq 'h';
         return output_offset($tidOX) . output_step() . output_preds_fp32() if $prefix eq 's';
     }
 
     sub output
     {
+        return call_output() .output_int16() if $int16;
         return call_output() .output_fp16() if $prefix eq 'h';
         return call_output() .output_fp32() if $prefix eq 's';
     }
